--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         alert("Please answer all questions!");
         return;
       }
-      document.body.innerHTML = `<div style='min-height: 100vh; display: flex; align-items: center; justify-content: center; background: black;'><h1 style='font-size: 2.5rem; color: red; animation: pulse 1s infinite;'>💀 YOU GOT HACKED!</h1></div>`;
+      document.body.innerHTML = `<div style='min-height: 100vh; display: flex; align-items: center; justify-content: center; background: black; padding: 1rem; text-align: center;'><h1 style='font-size: 2rem; color: red; animation: pulse 1s infinite;'>💀 YOU GOT HACKED!</h1></div>`;
       if (navigator.vibrate) {
-        navigator.vibrate([200, 100, 200, 100, 200]);
+        navigator.vibrate([300, 100, 300, 100, 300, 100, 300, 100, 300,300, 100, 300, 100, 300, 100, 300, 100, 300]);
       }
     }
   </script>
@@ -41,10 +41,11 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
+      padding: 1rem;
     }
     .container {
       background: white;
-      padding: 2rem;
+      padding: 1.5rem;
       border-radius: 1rem;
       box-shadow: 0 10px 25px rgba(0,0,0,0.1);
       max-width: 500px;
@@ -57,9 +58,10 @@
       padding: 0.5rem 1rem;
       border: none;
       border-radius: 0.5rem;
-      margin-right: 0.5rem;
+      margin: 0.25rem 0.5rem 0.25rem 0;
       cursor: pointer;
       background: #e2e8f0;
+      width: 45%;
     }
     button.selected {
       background: #3b82f6;
@@ -75,6 +77,15 @@
     @keyframes pulse {
       0%, 100% { opacity: 1; }
       50% { opacity: 0.2; }
+    }
+    @media (max-width: 500px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+      button {
+        font-size: 1rem;
+        width: 48%;
+      }
     }
   </style>
 </head>
