--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         alert("Please answer all questions!");
         return;
       }
-      document.body.innerHTML = `<div style='min-height: 100vh; display: flex; align-items: center; justify-content: center; background: black; padding: 1rem; text-align: center;'><h1 style='font-size: 2rem; color: red; animation: pulse 1s infinite;'>💀 YOU GOT HACKED!</h1></div>`;
+      document.body.innerHTML = `<div style='min-height: display: flex; align-items: center; justify-content: center; background: black; padding: 1rem; text-align: center;'><h1 style='font-size: 2rem; color: red; animation: pulse 1s infinite;'>💀 YOU GOT HACKED!</h1></div>`;
       if (navigator.vibrate) {
-        navigator.vibrate([300, 100, 300, 100, 300, 100, 300, 100, 300,300, 100, 300, 100, 300, 100, 300, 100, 300]);
+        navigator.vibrate([300, 100, 300, 100, 300, 100, 300, 100,300,100, 300, 100, 300, 100, 300, 100, 300]);
       }
     }
   </script>
