--- a/index.html
+++ b/index.html
@@ -26,7 +26,26 @@
         alert("Please answer all questions!");
         return;
       }
-      document.body.innerHTML = `<div style='min-height: align-items: center; justify-content: center; background: black; padding: 1rem; text-align: center;'><h1 style='font-size: 2rem; color: red; animation: pulse 1s infinite;'>💀 YOU GOT HACKED!</h1></div>`;
+      document.body.innerHTML = `
+  <div style="
+    height: 100vh; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    background: black; 
+    padding: 1rem; 
+    text-align: center;
+    margin: 0;">
+    <h1 style="
+      font-size: 2rem; 
+      color: red; 
+      animation: pulse 1s infinite;
+      user-select: none;">
+      💀 YOU GOT HACKED!
+    </h1>
+  </div>
+`;
+
       if (navigator.vibrate) {
         navigator.vibrate([300, 100, 300, 100, 300, 100, 300, 100,300,100, 300, 100, 300, 100, 300, 100, 300]);
       }
