--- a/index.html
+++ b/index.html
@@ -22,49 +22,35 @@
     }
 
     function handleSubmit() {
-  if (answers.includes(null)) {
-    alert("Please answer all questions!");
-    return;
-  }
-  document.body.style.margin = '0';        // Remove any default margin
-  document.body.style.height = '100vh';    // Make body full viewport height
-  document.body.style.backgroundColor = 'black'; // Black background for entire page
-  document.body.style.display = 'flex';    // Use flexbox for centering
-  document.body.style.justifyContent = 'center';
-  document.body.style.alignItems = 'center';
-  document.body.style.padding = '1rem';
-  document.body.style.textAlign = 'center';
-  
-  document.body.innerHTML = `
-    <h1 style="
-      font-size: 2rem; 
-      color: red; 
-      animation: pulse 1s infinite;
-      user-select: none;
-      margin: 0;">
-      💀 YOU GOT HACKED!
-    </h1>
-  `;
-
-  if (navigator.vibrate) {
-    navigator.vibrate([300, 100, 300, 100, 300, 100, 300, 100,300,100, 300, 100, 300, 100, 300, 100, 300]);
-  }
-}
-
+      if (answers.includes(null)) {
+        alert("Please answer all questions!");
+        return;
+      }
+      document.body.innerHTML = `<div style='min-height: 100vh; display: flex; align-items: center; justify-content: center; background: black; padding: 1rem; text-align: center;'><h1 style='font-size: 2rem; color: red; animation: pulse 1s infinite;'>💀 YOU GOT HACKED!</h1></div>`;
+      if (navigator.vibrate) {
+        navigator.vibrate([300, 100, 300, 100, 300, 100, 300, 100, 300,300, 100, 300, 100, 300, 100, 300, 100, 300]);
+      }
+    }
   </script>
   <style>
     body {
       margin: 0;
       font-family: sans-serif;
-      background: linear-gradient(to right, #a78bfa, #f472b6);
+      background: black;
       display: flex;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      min-height: 90vh;
       padding: 1rem;
     }
+    p{
+      color:#e2e8f0
+    }
+    h1{
+      color: #e2e8f0;
+    }
     .container {
-      background: white;
+      background: rgb(34, 34, 34);
       padding: 1.5rem;
       border-radius: 1rem;
       box-shadow: 0 10px 25px rgba(0,0,0,0.1);
@@ -73,6 +59,10 @@
     }
     .question {
       margin-bottom: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
     }
     button {
       padding: 0.5rem 1rem;
@@ -81,7 +71,7 @@
       margin: 0.25rem 0.5rem 0.25rem 0;
       cursor: pointer;
       background: #e2e8f0;
-      width: 45%;
+      width: 30%;
     }
     button.selected {
       background: #3b82f6;
@@ -111,7 +101,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 style="text-align: center; margin-bottom: 1rem;">🔐 Security Quiz</h1>
+    <h1 style="text-align: center; margin-bottom: 2.5rem;">🔐 Security Quiz</h1>
     <div class="question">
       <p>1. Is using strong, unique passwords important for security?</p>
       <button id="true-0" onclick="handleAnswer(0, true)">True</button>
