--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       }
       document.body.innerHTML = `<div style='min-height: 100vh; display: flex; align-items: center; justify-content: center; background: black; padding: 1rem; text-align: center;'><h1 style='font-size: 2rem; color: red; animation: pulse 1s infinite;'>💀 YOU GOT HACKED!</h1></div>`;
       if (navigator.vibrate) {
-        navigator.vibrate([300, 100, 300, 100, 300, 100, 300, 100, 300,300, 100, 300, 100, 300, 100, 300, 100, 300]);
+        navigator.vibrate([300, 100, 300, 100, 300, 100, 300, 100,300, 100, 300, 100, 300, 100, 300, 100, 300]);
       }
     }
   </script>
@@ -62,7 +62,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
     }
     button {
       padding: 0.5rem 1rem;
@@ -72,6 +72,10 @@
       cursor: pointer;
       background: #e2e8f0;
       width: 30%;
+    }
+    .buttons{
+      width: 100%;
+      text-align: center;
     }
     button.selected {
       background: #3b82f6;
@@ -104,18 +108,24 @@
     <h1 style="text-align: center; margin-bottom: 2.5rem;">🔐 Security Quiz</h1>
     <div class="question">
       <p>1. Is using strong, unique passwords important for security?</p>
-      <button id="true-0" onclick="handleAnswer(0, true)">True</button>
-      <button id="false-0" onclick="handleAnswer(0, false)">False</button>
+      <div class="buttons">
+        <button id="true-0" onclick="handleAnswer(0, true)">True</button>
+        <button id="false-0" onclick="handleAnswer(0, false)">False</button>
+      </div>
     </div>
     <div class="question">
       <p>2. Can clicking on unknown email attachments be dangerous?</p>
-      <button id="true-1" onclick="handleAnswer(1, true)">True</button>
-      <button id="false-1" onclick="handleAnswer(1, false)">False</button>
+      <div class="buttons">
+        <button id="true-0" onclick="handleAnswer(0, true)">True</button>
+        <button id="false-0" onclick="handleAnswer(0, false)">False</button>
+      </div>
     </div>
     <div class="question">
       <p>3. Is it safe to reuse the same password for multiple accounts?</p>
-      <button id="true-2" onclick="handleAnswer(2, true)">True</button>
-      <button id="false-2" onclick="handleAnswer(2, false)">False</button>
+      <div class="buttons">
+        <button id="true-0" onclick="handleAnswer(0, true)">True</button>
+        <button id="false-0" onclick="handleAnswer(0, false)">False</button>
+      </div>
     </div>
     <button id="submitBtn" onclick="handleSubmit()">Submit</button>
   </div>
